[tool.poetry]
name = "multicaller"
version = "0.1.0"
description = "web3py multicaller simplified interface"
authors = ["gerrrg <gerrrrrrrg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
web3 = "~6"

[tool.poetry.group.dev.dependencies]
pytest="*"
black = "22.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
autoflake8 = "^0.4.1"
autopep8 = "^2.0.4"
click = "8.0.2"
setuptools = ">=42.2.2"


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
