[metadata]
name = multicaller
version = 0.0.0a7
author = gerrrg
author_email = gerrrrrrrg@gmail.com
description = web3py multicaller simplified interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gerrrg/multicaller
project_urls =
    Bug Tracker = https://github.com/gerrrg/multicaller/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
install_requires =
	web3==5.19.0
